--- a/project1.html
+++ b/project1.html
@@ -9,44 +9,81 @@
 </head>
 
 <body>
+    <div class="header">
+ 
     <div class="logo">
-    <img src="images/logo.png">
+        <a href="project1.html">
+            <img src="images/logo.png">
+        </a>
+    </div>
+    <div class="navigationbar">
+        <div class="news">
+            <a href="#firstneww" target="_blank">Reviews   </a>
+        </div>
+        <div class="news">
+            <a href="#forthnews" target="_blank">Hot Topic   </a>
+        </div>
+        <div class="news">
+            <a href="#thirdnews" target="_blank">Shocking news  </a>
+        </div>
+        </div>
 
+    <div class="login">
+            <input type="email" id="email" name="email" required placeholder="Email">
+            <input type="password" id="password" name="password" required placeholder="Password">
+        <button type="submit">Login</button>
     </div>
 
-    <div class="tabs">
-        <a href="#amazon" target="_blank">Shocking News</a>
-        <a href="#linkdin" target="_blank">Hot Topic</a>
-        <a href="#review" target="_blank">Review</a>
+    </div>
+    </div>
+    
 
+    <div  class="sector1">
+        <div id="firstnews"  class="allnews">
+            <a href="project1strana1.html" target="_blank">
+                <img src="images/firstimage.webp" alt="firstnews" ></a>
+                <div class="description">Apple acquires AI startup specializing in overlooking manufacturing components</div>
+        </div>
+
+        <div id="secondnews"  class="allnews">
+            <a href="project1strana2.html" target="_blank">
+                <img src="images/secondimage.webp" alt="secondnews" ></a>
+                <div class="description">Scrap coercive ‘privacy fee’, MEPs urge Meta’s Nick Clegg in open letter</div>
+        </div>
+
+        <div id="thirdnews"  class="allnews" >
+            <a href="project1strana3.html" target="_blank">
+                <img src="images/thirdimage.webp" alt="thirdnews" ></a>
+                <div class="description">Mercedes begins piloting Apptronik humanoid robots</div>
+        </div>
     </div>
 
-    <div > <h1>Your trustworthy news site</h1></div>
-    <div class="container">
-        <div class="image-wrapper">
-            <a href="project1strana1.html"><img src="/images/firstimage.webp" alt="Image 1"></a>
-            <p>AliExpress is first online marketplace to face DSA investigation by EU</p>        
-        </div>
-        <div class="image-wrapper">
-            <a href="project1strana2.html"><img src="/images/secondimage.webp" alt="Image 2"></a>
-            <p>Europe eyes LinkedIn’s use of data for ads in another DSA ask</p>        
-        </div>
-        <div class="image-wrapper">
-            <a href="project1strana3.html"><img src="/images/thirdimage.webp" alt="Image 3"></a>
-            <p>Reddit introduces a new ad format that looks similar to posts made by users</p>        
-        </div>
-    </div>
-    <footer>
-        <div class="footer-content">
-            <div class="footer-item">
-                <h2>Your Website</h2>
+    <div class="sector2">
+        <div id="forthnews" class="forthnews">
+            <a href="project1strana4.html" target="_blank">
+                <img src="images/forthimage.webp" alt="forthnews">
+            </a>
+        <div class="bigdescription"><p>From mono to mainstream: 20 years of Bluetooth audio<br>
+            <div class="littledescription"><p>A journey through wireless audio history with Bluetooth SIG’s Chuck Sabin.</p>
             </div>
-            <div class="footer-item">
-                <p>Email: <a href="mailto:info@yourwebsite.com">info@yourwebsite.com</a></p>
-                <p>Address: 123 Main Street, City, Country</p>
-                <p>Phone: +1 (555) 123-4567</p>
-            </div>
+            <div class="seemore"><a href="project1strana4.html" target="_blank"><p>See more</p></a>
+                </div>
         </div>
-    </footer>
+        </div>
+    </div>
+
+    <div class="sector3">
+        <div id="fifthnews" class="fifthnews">
+            <a href="project1strana5.html" target="_blank">
+                <img src="images/fifthimage.webp" alt="fifthhnews">
+            </a>
+        <div class="bigdescription">first text<br>
+            <div class="littledescription"><p>second text</p>
+            </div>
+
+        </div>
+        </div>
+    </div>
+
 </body>
 </html>
