--- a/labs/lab3/lab3.html
+++ b/labs/lab3/lab3.html
@@ -11,7 +11,7 @@
 
     <div class="header">
         <div> <img src="images-lab3/Kawasaki-Logo.png" alt="logo" class="logo">
-        <h1>New sales offer</h1></div>
+        <h1>New Sales Offer</h1></div>
     <img src="images-lab3/img1.png" alt="prva" class="prva">
 </div>
 
