--- a/project1.html
+++ b/project1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://kit.fontawesome.com/2604d1c2ac.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="project1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +25,7 @@
             <a href="#forthnews" target="_blank">Hot Topic   </a>
         </div>
         <div class="news">
-            <a href="#thirdnews" target="_blank">Shocking news  </a>
+            <a href="#fifthnews" target="_blank">Shocking news  </a>
         </div>
         </div>
 
@@ -75,15 +76,29 @@
     <div class="sector3">
         <div id="fifthnews" class="fifthnews">
             <a href="project1strana5.html" target="_blank">
-                <img src="images/fifthimage.webp" alt="fifthhnews">
+                <img src="images/fifthimage.webp" alt="fifthhnews" >
             </a>
-        <div class="bigdescription">first text<br>
-            <div class="littledescription"><p>second text</p>
+        <div class="bigdescription">What Do All of ERCOT's Energy Conservation Alerts Mean?<br>
+            <div class="littledescription"><p>The Electric Reliability Council of Texas has a new notification system for energy conditions in the state. It's already led to energy savings at critical moments.</p>
             </div>
 
         </div>
         </div>
     </div>
-
+    <footer>
+    <div class="footer">
+        <div class="footercontent"></div>
+            <h2>Contact Us</h2>
+            <p>Address: 3828 Piermont Drive, Albuquerque NM</p>
+            <p>Phone: +387 60 406 17 38</p>
+            <div class="footer-social">
+                <h2>Follow Us</h2>
+                <a href="https://www.linkedin.com/in/emir-gasi-6859242b9/">
+                    <i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/emirgasi1"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://mail.google.com/mail/u/?authuser=emir.gasi@stu.ibu.edu.ba"><i class="fa-solid fa-envelope"></i></a>
+            </div>
+    </div>
+</footer>
 </body>
 </html>
