--- a/project1strana1.html
+++ b/project1strana1.html
@@ -7,35 +7,114 @@
     <title>Quantumix</title>
     <link rel="icon" type="image/x-icon" href="/images/1709982726079qj4tk4wn.jpg">
     <script src="https://kit.fontawesome.com/2604d1c2ac.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 </head>
 <body>
-    <div class="header1">
-        <div class="logo">
-            <a href="project1.html" target="_blank">
-                <img src="images/logo.png">
-            </a>
-        </div>
-        <div class="gaming">
-            <a href="project1strana5.html">
-            <p>Energy</p></a>
+    <div class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <a href="project1.html">
+                    <img src="images/logo.png">
+                    </a>
+                </div>
+                <div class="col-md-4">
+
+                </div>
+                <div class="col-md-4">
+                    <div class="navbar">
+                        <div class="news">
+                            <a href="#firstnew" target="_blank">Reviews   </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="section1">
-        <div class="naslov">
-        <p>LinkedIn plans to add gaming to its platform</p>
+    <div class="sector2">
+        <div class="row">
+        <div class="col-md-3">
         </div>
-        <div class="autor"><p>Author: Emir Gasi</p></div>
-        <div class="slika"><img src="images/firstimage.webp" alt="linkedin"></div>
-        <div class="icon"><p><i class="fa-solid fa-camera"></i>  Image Credits: LinkedIn China via Weibo</p></div>
-        <div class="text">
-            <pre>LinkedIn, the Microsoft-owned social platform, has made a name for itself primarily as a<br>platform for people looking to network and pick up knowledge for professional purposes,<br>and for recruitment — a business that now has more 1 billion users.<br>Now, to boost the time people are spending on the platform, <br>the company is breaking into a totally new area: gaming.</pre>        
-            <pre>TechCrunch has learned and confirmed that LinkedIn is working on a new games experience.<br>It will be doing so by tapping into the same wave of puzzle-mania that helped simple <br>games like Wordle find viral success and millions of players. Three early<br>efforts are games called “Queens”, “Inference” and “Crossclimb.”</pre>
-            <pre>App researchers have started to find code that points to the work LinkedIn is doing.<br>One of them, <a href="https://twitter.com/nima_owji">Nima Owji</a>, said that one idea LinkedIn appears to be experimenting with <br>involves player scores being organised by places of work, with companies getting “ranked” <br>by those scores.</pre>
-            <pre>A spokesperson for LinkedIn has confirmed that it is working on gaming, but said there is as yet no launch date.</pre>
-            <pre>“We’re playing with adding puzzle-based games within the LinkedIn experience to unlock a <br>bit of fun, deepen relationships, and hopefully spark the opportunity for conversations,” <br>the spokesperson said in a message to TechCrunch. “Stay tuned for more!”</pre>
-            <pre>The spokesperson added that the images shared by the researcher on X are not the latest versions.</pre>
+        <div class="col-md-5">
+            <div class="news1">
+                        <div class="bigdescription">
+                            <p>LinkedIn plans to add gaming to its platform</p>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="col-md-3">
+                </div>
+            </div>
+        </div>
+    <div class="sector3">
+        <div class="row">
+            <div class="col-md-4">
+            </div>
+            <div class="col-md-4">
+                <div class="puna">
+                        <div class="slika" id="pic">
+                            <img src="images/firstimage.webp">
+                        </div>
+                     </div>
+                 </div>
+            <div class="col-md-4">
+             </div>
+          </div>
+      </div>
+    <div class="sector4">
+        <div class="row">
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-5">
+                <div class="new">
+                    <div class="credit">
+                        <p><i class="fa-solid fa-camera"></i>Image credit:LinkedIn China via Weibo</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+            </div>
+        </div>
+    </div>
+    <div class="sector5">
+        <div class="row">
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-5">
+                <div class="zatekst">
+                        <div class="tekst" id="tekstic">
+                            <p>LinkedIn, the Microsoft-owned social platform, has made a name for itself primarily as a platform for people looking to network and pick up knowledge for professional purposes, and for recruitment — a business that now has more 1 billion users. Now, to boost the time people are spending on the platform, the company is breaking into a totally new area: gaming.
+                                <br><br>
+                                TechCrunch has learned and confirmed that LinkedIn is working on a new games experience. It will be doing so by tapping into the same wave of puzzle-mania that helped simple games like Wordle find viral success and millions of players. Three early efforts are games called “Queens”, “Inference” and “Crossclimb.”</p>
+                        </div>
+                     </div>
+                 </div>
+            <div class="col-md-3">
+             </div>
+          </div>
+      </div>
+      <footer>
+        <div class="footer">
+            <div class="col-md-4">
+                <div class="footercontent"></div>
+                    <h2>Contact Us</h2>
+                    <p>Address: 3828 Piermont Drive, Albuquerque NM</p>
+                    <p>Phone: +387 60 406 17 38</p>
+                    <div class="footer-social">
+                        <h2>Follow Us</h2>
+                        <a href="https://www.linkedin.com/in/emir-gasi-6859242b9/">
+                            <i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://github.com/emirgasi1"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://mail.google.com/mail/u/?authuser=emir.gasi@stu.ibu.edu.ba"><i class="fa-solid fa-envelope"></i></a>
+                    </div>
+            </div>
         </div>
         </div>
+        </footer>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
 </html>
