--- a/project/pokusaj1.html
+++ b/project/pokusaj1.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="pokusaj1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GASI CONSULTING</title>
+    <title>IceBreaker</title>
     <link rel="icon" type="image/x-icon" href="pokusaj images/ice-cube.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -69,7 +69,7 @@
                             Achieving Growth
                         </div>
                         <div class="free">
-                            <a href="#part">
+                            <a href="consultation.html">
                                 <button class="gumbic">Free consultation</button>
                             </a>
                         </div>
@@ -91,7 +91,7 @@
                             Here, we offer tailored solutions aimed at maximizing your business's potential. From strategic planning to market expansion, our team is dedicated to providing you with the tools and strategies necessary to drive sustainable growth. With our expertise and personalized approach, we empower businesses like yours to achieve their growth objectives efficiently and effectively. Let us partner with you on your journey to success.
                         </div>
                         <div class="info">
-                            <a href="#part">
+                            <a href="service.html">
                                 <button class="gumbic">More info</button>
                             </a>
                         </div>
@@ -105,7 +105,7 @@
                                 Explore our diverse portfolio of projects. Each endeavor showcases our commitment to excellence and innovation. From groundbreaking initiatives to transformative ventures, we take pride in our ability to deliver exceptional results. With a focus on quality and creativity, our projects are designed to make a lasting impact. Join us as we embark on new challenges and push the boundaries of possibility. Let's create something extraordinary together.
                             </div>
                                 <div class="info">
-                                    <a href="#part">
+                                    <a href="projekti.html">
                                         <button class="gumbic">More info</button>
                                     </a>
                             </div>
@@ -248,7 +248,10 @@
                         <div class="col-md-4">
                             <div class="footer-social">
                                 <div class="address">
-                                    <h2>Socials</h2> 
+                                    <h2>Socials</h2>
+                                    <a href="model.html">
+                                    <h2>Contact Us</h2> 
+                                    </a>
                                  </div>
                                 <a href="https://www.linkedin.com/in/emir-gasi-6859242b9/">
                                     <i class="fa-brands fa-linkedin"></i></a>
