--- a/project/pokusaj1.html
+++ b/project/pokusaj1.html
@@ -28,25 +28,29 @@
                 <div class="col-md-8">
                         <div class="lista">
                         <ul><a href="about.html">
-                            <il>About </il>
+                            <li>About </li>
                         </a>
                         <a href="projekti.html">
-                            <il>Projects </il>
+                            <li>Projects </li>
                         </a>
                         <a href="service.html">
-                            <il>Services </il>
+                            <li>Services </li>
                         <a href="tools.html">
-                            <il>Tools&Tips </il>
+                            <li>Tools&Tips </li>
                         </a>
                         <a href="#foot">
-                            <il>Contact </il>
+                            <li>Contact </li>
                         </a>
                         </ul>
+                        
+                    </div>
+                    <div id="menu-btn">
+                        <i class="fa-solid fa-list"></i>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="togglebutton">
-                        <button id="togglebutton">Toggle Theme</button>
+                        <button id="togglebutton"></button>
                     </div>
                 </div>
             </div>
@@ -108,7 +112,7 @@
                                 Projects
                             </div>
                             <div class="text">
-                                Explore our diverse portfolio of projects. Each endeavor showcases our commitment to excellence and innovation. From groundbreaking initiatives to transformative ventures, <span id="tacka">...</span><span id="more">we take pride in our ability to deliver exceptional results. With a focus on quality and creativity, our projects are designed to make a lasting impact. Join us as we embark on new challenges and push the boundaries of possibility. Let's create something extraordinary together.</span>
+                                Explore our diverse portfolio of projects. Each endeavor showcases our commitment to excellence and innovation. From groundbreaking initiatives to transformative ventures, we take pride in our ability to deliver exceptional results. With a focus on quality <span id="tacka">...</span><span id="more">and creativity, our projects are designed to make a lasting impact. Join us as we embark on new challenges and push the boundaries of possibility. Let's create something extraordinary together.</span>
                                 <button type="button" class="read">Read more</button>
                             </div>
                                 <div class="info">
@@ -123,7 +127,7 @@
                                 Clients
                             </div>
                             <div class="text">
-                                Discover the success stories of our esteemed clients. Through collaborative partnerships and strategic collaborations, we've helped businesses like yours achieve their goals and surpass expectations.<span id="tacka">...</span><span id="more"> Our client-centric approach ensures that we understand your unique needs and tailor our solutions to meet them effectively. With a proven track record of client satisfaction and loyalty, we take pride in building long-lasting relationships. </span>
+                                Discover the success stories of our esteemed clients. Through collaborative partnerships and strategic collaborations, we've helped businesses like yours achieve their goals and surpass expectations.Our client-centric approach ensures that we understand your unique <span id="tacka">...</span><span id="more"> needs and tailor our solutions to meet them effectively. With a proven track record of client satisfaction and loyalty, we take pride in building long-lasting relationships. </span>
                                 <button type="button" class="read">Read more</button>
                             </div>
                             <div class="info">
