--- a/project/pokusaj1.html
+++ b/project/pokusaj1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
     <script src="https://kit.fontawesome.com/2604d1c2ac.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="pokusaj1.css">
     <meta charset="UTF-8">
@@ -173,19 +175,15 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="ourclients">
-                                Our clients
+                            <div class="gallery">
+                                <img src="pokusajimages/alena-aenami-amess-1k.jpg" class="gallery-image" alt="Image 1">
+                                <img src="pokusajimages/alena-aenami-dreamer-1k.jpg" class="gallery-image" alt="Image 2">
+                                <img src="pokusajimages/alena-aenami-gate-1k.jpg" class="gallery-image" alt="Image 3">
+                                <!-- Add more images here -->
                             </div>
-                            <div class="image-gallery">
-                                <div class="gallery-slider">
-                                    <img src="pokusajimages/logo2.png" class="gallery-image" alt="Client Logo">
-                                    <img src="pokusajimages/logo3.png" class="gallery-image" alt="Client Logo">
-                                    <img src="pokusajimages/logo4.png" class="gallery-image" alt="Client Logo">
-                                    <img src="pokusajimages/logo1.png" class="gallery-image" alt="Client Logo">
-                                </div>
-                                <button class="gallery-control left" onclick="moveSlide(-1)">&#10094;</button>
-                                <button class="gallery-control right" onclick="moveSlide(1)">&#10095;</button>
-                            </div>
+                            
+                            <button class="gallery-control left" onclick="moveSlide(-1)">&#10094;</button>
+                            <button class="gallery-control right" onclick="moveSlide(1)">&#10095;</button>
                         <div class="col-md-4">
                         </div>
                     </div>
@@ -193,41 +191,42 @@
             </div>
         </div>
         
-            <div class="sektor6"><!-- zavrseno-->
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-4">
+        <div class="sektor6">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-4">
+                        <div class="contact">
+                            Contact
                         </div>
-                        <div class="col-md-4">
-                                <div class="contact">
-                                    Contact
-                                </div>
+                        <form id="contactForm">
                             <div class="inputs">
-                                    <p>First name:
-                                    <input type="text" id="firstName" name="firstName" >
+                                <p>
+                                    First name:
+                                    <input type="text" id="firstName" name="firstName">
                                     Last name:
-                                    <input type="text" id="lastName" name="lastName" >
+                                    <input type="text" id="lastName" name="lastName">
                                     Email:
                                     <input type="email" id="email" name="email">
                                     Subject:
-                                    <textarea id="subject" name="subject" ></textarea>
+                                    <textarea id="subject" name="subject"></textarea>
+                                    Date:
+                                    <input type="text" id="datepicker" name="date">
+                                    Password:
+                                    <input type="password" id="password" name="password">
                                     <div class="submit">
-                                        <a href="consultation.html">  
-                                         <button type="submit">Submit</button>
-                                        </a>  
+                                        <button type="submit">Submit</button>
                                     </div>
-                                    </p>
-                                </div>
-                                <div class="maps">
-                                    <img src="pokusajimages/maps.png">
-                                </div>
-                            </div>
-                        <div class="col-md-4">
+                                    <div id="posts-container"></div>
 
-                        </div>
+                                </p>
+                            </div>
+                        </form>
                     </div>
+                    <div class="col-md-4"></div>
                 </div>
             </div>
+        </div>
         <footer>
             <div class="sektor7"><!-- zavrseno-->
                 <div class="container">
@@ -281,6 +280,8 @@
             </div>
         </footer>
         <script src="pokusaj1.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
