--- a/project/pokusaj1.html
+++ b/project/pokusaj1.html
@@ -217,7 +217,9 @@
                                     <div class="submit">
                                         <button type="submit">Submit</button>
                                     </div>
-                                    <div id="posts-container"></div>
+                                    <div id="posts-container">
+                                        <!-- Comments will be dynamically added here -->
+                                    </div>
 
                                 </p>
                             </div>
