--- a/project/pokusaj1.html
+++ b/project/pokusaj1.html
@@ -90,7 +90,23 @@
                 </div>
             </div>
         </div>
-        
+        <div class="container mt-5">
+            <h2 class="text-center">Product List</h2>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Product ID</th>
+                        <th>Product Name</th>
+                        <th>Price</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="product-list">
+                    <!-- Product rows will be dynamically added here -->
+                </tbody>
+            </table>
+        </div>
+        <script src="script.js"></script>
         <div class="sektor3"><!-- zavrseno-->
             <div class="container">
                 <div class="row">
