--- a/project/service.html
+++ b/project/service.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" type="text/css" href="service.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GASI CONSULTING</title>
-    <link rel="icon" type="image/x-icon" href="pokusaj images/ice-cube.png">
+    <title>IceBreak</title>
+    <link rel="icon" type="image/x-icon" href="pokusajimages/ice-cube.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
@@ -47,14 +47,35 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="service">Services</div>
-                        <div class="tekst">
-                            <p>Free consultation</p>
-                        </div>
+                    <div class="tekst">
+                        <p>Free consultation</p>
+                    </div>
                     <div class="image1">
                         <a href="consultation.html">
-                        <img src="pokusajimages/ljudi1.webp">
+                            <img src="pokusajimages/ljudi1.webp">
                         </a>
                     </div>
+                    <div class="product32">
+                        <h1>Products</h1>
+                        <div id="productList">
+                            <ul>
+                                <li>
+                                    Product 1
+                                    <button class="gumbic" onclick="loadDetails(1)">View More</button>
+                                    <button class="gumbic" onclick="editProduct(1)">Edit</button>
+                                    <button class="gumbic" onclick="deleteProduct(1)">Delete</button>
+                                </li>
+                                <li>
+                                    Product 2
+                                    <button class="gumbic" onclick="loadDetails(2)">View More</button>
+                                    <button class="gumbic" onclick="editProduct(2)">Edit</button>
+                                    <button class="gumbic" onclick="deleteProduct(2)">Delete</button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="details"></div>
+                    <div id="message" class="message"></div>
                 </div>
             </div>
         </div>
@@ -143,8 +164,11 @@
                 </div>
             </div>
         </footer>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="services.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
