--- a/project/pokusaj1.html
+++ b/project/pokusaj1.html
@@ -9,7 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IceBreak</title>
     <link rel="icon" type="image/x-icon" href="pokusajimages/ice-cube.png">
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet">
+
 
 </head>
 <body>
@@ -47,7 +50,7 @@
                         
                     </div>
                     <div id="menu-btn">
-                        <i class="fa-solid fa-list"></i>
+                        <i class="fa-solid fa-list" id="but1"></i>
                     </div>
                 </div>
                 <div class="col-md-2">
@@ -101,7 +104,7 @@
                             Here, we offer tailored solutions aimed at maximizing your business's potential. From strategic planning to market expansion, our team is dedicated to providing you with the tools and strategies necessary to drive sustainable growth.<span id="tacka">...</span><span id="more"> With our expertise and personalized approach, we empower businesses like yours to achieve their growth objectives efficiently and effectively. Let us partner with you on your journey to success.</span>
                             <button type="button" class="read">Read more</button>
                         </div>
-                        <div class="info">
+                        <div class="info1">
                             <a href="service.html">
                                 <button class="gumbic">More info</button>
                             </a>
@@ -116,7 +119,7 @@
                                 Explore our diverse portfolio of projects. Each endeavor showcases our commitment to excellence and innovation. From groundbreaking initiatives to transformative ventures, we take pride in our ability to deliver exceptional results. With a focus on quality <span id="tacka">...</span><span id="more">and creativity, our projects are designed to make a lasting impact. Join us as we embark on new challenges and push the boundaries of possibility. Let's create something extraordinary together.</span>
                                 <button type="button" class="read">Read more</button>
                             </div>
-                                <div class="info">
+                                <div class="info2">
                                     <a href="projekti.html">
                                         <button class="gumbic">More info</button>
                                     </a>
@@ -131,7 +134,7 @@
                                 Discover the success stories of our esteemed clients. Through collaborative partnerships and strategic collaborations, we've helped businesses like yours achieve their goals and surpass expectations.Our client-centric approach ensures that we understand your unique <span id="tacka">...</span><span id="more"> needs and tailor our solutions to meet them effectively. With a proven track record of client satisfaction and loyalty, we take pride in building long-lasting relationships. </span>
                                 <button type="button" class="read">Read more</button>
                             </div>
-                            <div class="info">
+                            <div class="info3">
                                     <a href="#part">
                                         <button class="gumbic" id="gumbic3">More info</button>
                                     </a>
@@ -175,8 +178,8 @@
                         </div>
                         <div class="col-md-4">
                             <div class="gallery">
-                                <img src="pokusajimages/alena-aenami-amess-1k.jpg" class="gallery-image" alt="Image 1">
-                                <img src="pokusajimages/alena-aenami-dreamer-1k.jpg" class="gallery-image" alt="Image 2">
+                                <img src="pokusajimages/37a00de773c4ac2d54db67305a125860.jpg" class="gallery-image" alt="Image 1">
+                                <img src="pokusajimages/4c94910d8eefd90bc705ccd0556aa871.jpg" class="gallery-image" alt="Image 2">
                                 <img src="pokusajimages/alena-aenami-gate-1k.jpg" class="gallery-image" alt="Image 3">
                                 <!-- Add more images here -->
                             </div>
@@ -229,6 +232,8 @@
                 </div>
             </div>
         </div>
+        <h1 id="weather">Weather Information</h1>
+        <div id="weather-info"></div>
         <footer>
             <div class="sektor7"><!-- zavrseno-->
                 <div class="container">
@@ -285,7 +290,10 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+        <link href='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css' rel='stylesheet' />
+        <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
