--- a/project/projekti.html
+++ b/project/projekti.html
@@ -20,7 +20,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-6">
                     <div class="lista">
                     <ul><a href="about.html">
                         <il>About </il>
@@ -37,6 +37,11 @@
                         <il>Contact </il>
                     </a>
                     </ul>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="togglebutton">
+                    <button id="togglebutton"></button>
                 </div>
             </div>
             </div>
@@ -159,6 +164,7 @@
                 </div>
             </div>
         </footer>
+<script src="projekti.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
